--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,4 +4,4 @@
 <ul>
   <li *ngFor="let order of orders">{{ order }}</li>
 </ul>
-<button class="btn btn-primary" (click)="back()">Back</button>
+<button class="btn btn-primary" (click)="back()">Go Back</button>
